project('libtsp', 'c',
  version: '7.0',
  default_options: [
    'c_std=c99',
    'warning_level=0',
  ],
)

# Include directories
inc = include_directories('include')

# Audio file I/O routines (AF module)
af_sources = files(
  'libtsp/AF/AFclose.c',
  'libtsp/AF/AFdReadData.c',
  'libtsp/AF/AFdWriteData.c',
  'libtsp/AF/AFfReadData.c',
  'libtsp/AF/AFfWriteData.c',
  'libtsp/AF/AFopenRead.c',
  'libtsp/AF/AFopenWrite.c',
  'libtsp/AF/AFopnRead.c',
  'libtsp/AF/AFopnWrite.c',
  'libtsp/AF/AFreadData.c',
  'libtsp/AF/AFsetFileType.c',
  'libtsp/AF/AFsetInfo.c',
  'libtsp/AF/AFsetNHpar.c',
  'libtsp/AF/AFsetSpeaker.c',
  'libtsp/AF/AFwriteData.c',
  'libtsp/AF/dataio/AFdRdAlaw.c',
  'libtsp/AF/dataio/AFdRdFx.c',
  'libtsp/AF/dataio/AFdRdIx.c',
  'libtsp/AF/dataio/AFdRdMulaw.c',
  'libtsp/AF/dataio/AFdRdTA.c',
  'libtsp/AF/dataio/AFdRdU1.c',
  'libtsp/AF/dataio/AFdWrAlaw.c',
  'libtsp/AF/dataio/AFdWrFx.c',
  'libtsp/AF/dataio/AFdWrIx.c',
  'libtsp/AF/dataio/AFdWrMulaw.c',
  'libtsp/AF/dataio/AFdWrTA.c',
  'libtsp/AF/dataio/AFdWrU1.c',
  'libtsp/AF/dataio/AFfRdAlaw.c',
  'libtsp/AF/dataio/AFfRdFx.c',
  'libtsp/AF/dataio/AFfRdIx.c',
  'libtsp/AF/dataio/AFfRdMulaw.c',
  'libtsp/AF/dataio/AFfRdTA.c',
  'libtsp/AF/dataio/AFfRdU1.c',
  'libtsp/AF/dataio/AFfWrAlaw.c',
  'libtsp/AF/dataio/AFfWrFx.c',
  'libtsp/AF/dataio/AFfWrIx.c',
  'libtsp/AF/dataio/AFfWrMulaw.c',
  'libtsp/AF/dataio/AFfWrTA.c',
  'libtsp/AF/dataio/AFfWrU1.c',
  'libtsp/AF/dataio/AFgetLine.c',
  'libtsp/AF/dataio/AFposition.c',
  'libtsp/AF/dataio/AFseek.c',
  'libtsp/AF/dataio/AFtell.c',
  'libtsp/AF/header/AFdecSpeaker.c',
  'libtsp/AF/header/AFfindType.c',
  'libtsp/AF/header/AFgetInfoRec.c',
  'libtsp/AF/header/AFoptions.c',
  'libtsp/AF/header/AFprAFpar.c',
  'libtsp/AF/header/AFpreSetWPar.c',
  'libtsp/AF/header/AFrdAIhead.c',
  'libtsp/AF/header/AFrdAUhead.c',
  'libtsp/AF/header/AFrdBLhead.c',
  'libtsp/AF/header/AFrdEShead.c',
  'libtsp/AF/header/AFrdINhead.c',
  'libtsp/AF/header/AFrdNShead.c',
  'libtsp/AF/header/AFrdSFhead.c',
  'libtsp/AF/header/AFrdSPhead.c',
  'libtsp/AF/header/AFrdSWhead.c',
  'libtsp/AF/header/AFrdTAhead.c',
  'libtsp/AF/header/AFrdTextAFsp.c',
  'libtsp/AF/header/AFrdWVhead.c',
  'libtsp/AF/header/AFreadHead.c',
  'libtsp/AF/header/AFsetNHread.c',
  'libtsp/AF/header/AFsetNHwrite.c',
  'libtsp/AF/header/AFsetRead.c',
  'libtsp/AF/header/AFsetWrite.c',
  'libtsp/AF/header/AFupdAIhead.c',
  'libtsp/AF/header/AFupdAUhead.c',
  'libtsp/AF/header/AFupdHead.c',
  'libtsp/AF/header/AFupdWVhead.c',
  'libtsp/AF/header/AFwrAIhead.c',
  'libtsp/AF/header/AFwrAUhead.c',
  'libtsp/AF/header/AFwriteHead.c',
  'libtsp/AF/header/AFwrWVhead.c',
)

# Filter routines (FI module)
fi_sources = files(
  'libtsp/FI/FIdBiquad.c',
  'libtsp/FI/FIdConvol.c',
  'libtsp/FI/FIdConvSI.c',
  'libtsp/FI/FIdFiltAP.c',
  'libtsp/FI/FIdFiltIIR.c',
  'libtsp/FI/FIdKaiserLPF.c',
  'libtsp/FI/FIdReadFilt.c',
  'libtsp/FI/FIdWinHamm.c',
  'libtsp/FI/FIdWinKaiser.c',
  'libtsp/FI/FIfBiquad.c',
  'libtsp/FI/FIfConvol.c',
  'libtsp/FI/FIfConvSI.c',
  'libtsp/FI/FIfDeem.c',
  'libtsp/FI/FIfFiltAP.c',
  'libtsp/FI/FIfFiltIIR.c',
  'libtsp/FI/FIfKaiserLPF.c',
  'libtsp/FI/FIfPreem.c',
  'libtsp/FI/FIfReadFilt.c',
  'libtsp/FI/FIfWinHamm.c',
  'libtsp/FI/FIfWinHCos.c',
  'libtsp/FI/FIfWinKaiser.c',
  'libtsp/FI/FIfWinRCos.c',
  'libtsp/FI/FIgdelFIR.c',
  'libtsp/FI/FIgdelIIR.c',
  'libtsp/FI/nucleus/FIrCosF.c',
  'libtsp/FI/nucleus/FIxKaiser.c',
)

# File list routines (FL module)
fl_sources = files(
  'libtsp/FL/FLbackup.c',
  'libtsp/FL/FLbaseName.c',
  'libtsp/FL/FLdate.c',
  'libtsp/FL/FLdefName.c',
  'libtsp/FL/FLdirName.c',
  'libtsp/FL/FLdReadData.c',
  'libtsp/FL/FLdWriteData.c',
  'libtsp/FL/FLexpHome.c',
  'libtsp/FL/FLextName.c',
  'libtsp/FL/FLfileDate.c',
  'libtsp/FL/FLfReadData.c',
  'libtsp/FL/FLfullName.c',
  'libtsp/FL/FLfWriteData.c',
  'libtsp/FL/FLgetLine.c',
  'libtsp/FL/FLgetRec.c',
  'libtsp/FL/FLhomeDir.c',
  'libtsp/FL/FLpathList.c',
  'libtsp/FL/FLpreName.c',
  'libtsp/FL/FLprompt.c',
  'libtsp/FL/FLreadLine.c',
  'libtsp/FL/nucleus/FLdReadTF.c',
  'libtsp/FL/nucleus/FLexist.c',
  'libtsp/FL/nucleus/FLfileSize.c',
  'libtsp/FL/nucleus/FLfReadTF.c',
  'libtsp/FL/nucleus/FLjoinNames.c',
  'libtsp/FL/nucleus/FLseekable.c',
  'libtsp/FL/nucleus/FLterm.c',
)

# Function routines (FN module)
fn_sources = files(
  'libtsp/FN/FNbessI0.c',
  'libtsp/FN/FNevChebP.c',
  'libtsp/FN/FNgcd.c',
  'libtsp/FN/FNiLog2.c',
  'libtsp/FN/FNsinc.c',
)

# Matrix algebra routines (MA module)
ma_sources = files(
  'libtsp/MA/MAdAllocMat.c',
  'libtsp/MA/MAdFreeMat.c',
  'libtsp/MA/MAdPrint.c',
  'libtsp/MA/MAfAllocMat.c',
  'libtsp/MA/MAfChSolve.c',
  'libtsp/MA/MAfFreeMat.c',
  'libtsp/MA/MAfPrint.c',
  'libtsp/MA/MAfSubMat.c',
  'libtsp/MA/MAfSyBilin.c',
  'libtsp/MA/MAfSyQuad.c',
  'libtsp/MA/MAfTpQuad.c',
  'libtsp/MA/MAfTpSolve.c',
  'libtsp/MA/MAiPrint.c',
  'libtsp/MA/MAlPrint.c',
  'libtsp/MA/nucleus/MAfChFactor.c',
  'libtsp/MA/nucleus/MAfLTSolve.c',
  'libtsp/MA/nucleus/MAfTTSolve.c',
)

# Math support routines (MS module)
ms_sources = files(
  'libtsp/MS/MSdConvCof.c',
  'libtsp/MS/MSdDeconvCof.c',
  'libtsp/MS/MSdIntLin.c',
  'libtsp/MS/MSdIntMC.c',
  'libtsp/MS/MSdLocate.c',
  'libtsp/MS/MSdNint.c',
  'libtsp/MS/MSdPolyInt.c',
  'libtsp/MS/MSfConvCof.c',
  'libtsp/MS/MSfGaussRand.c',
  'libtsp/MS/MSfIntLin.c',
  'libtsp/MS/MSfIntMC.c',
  'libtsp/MS/MSfUnifRand.c',
  'libtsp/MS/MSiCeil.c',
  'libtsp/MS/MSiFloor.c',
  'libtsp/MS/MSiPower.c',
  'libtsp/MS/MSlCeil.c',
  'libtsp/MS/MSlFloor.c',
  'libtsp/MS/MSratio.c',
  'libtsp/MS/nucleus/MScoefMC.c',
  'libtsp/MS/nucleus/MSdSlopeMC.c',
  'libtsp/MS/nucleus/MSevalMC.c',
  'libtsp/MS/nucleus/MSfSlopeMC.c',
)

# Signal processing routines (SP module)
sp_sources = files(
  'libtsp/SP/nucleus/SPdPreFFT.c',
  'libtsp/SP/nucleus/SPdTrMat2.c',
  'libtsp/SP/nucleus/SPfPreFFT.c',
  'libtsp/SP/nucleus/SPfTrMat2.c',
  'libtsp/SP/SPautoc.c',
  'libtsp/SP/SPcepXpc.c',
  'libtsp/SP/SPcorBWexp.c',
  'libtsp/SP/SPcorFilt.c',
  'libtsp/SP/SPcorFmse.c',
  'libtsp/SP/SPcorPmse.c',
  'libtsp/SP/SPcorXpc.c',
  'libtsp/SP/SPcovar.c',
  'libtsp/SP/SPcovCXpc.c',
  'libtsp/SP/SPcovFilt.c',
  'libtsp/SP/SPcovFmse.c',
  'libtsp/SP/SPcovLXpc.c',
  'libtsp/SP/SPcovMXpc.c',
  'libtsp/SP/SPcovPmse.c',
  'libtsp/SP/SPcovXpc.c',
  'libtsp/SP/SPdCFFT.c',
  'libtsp/SP/SPdQuantL.c',
  'libtsp/SP/SPdRFFT.c',
  'libtsp/SP/SPecXpc.c',
  'libtsp/SP/SPfCFFT.c',
  'libtsp/SP/SPfDCT.c',
  'libtsp/SP/SPfQuantL.c',
  'libtsp/SP/SPfQuantU.c',
  'libtsp/SP/SPfRFFT.c',
  'libtsp/SP/SPlpcISdist.c',
  'libtsp/SP/SPlpcLSdist.c',
  'libtsp/SP/SPlsfXpc.c',
  'libtsp/SP/SPpcBWexp.c',
  'libtsp/SP/SPpcXcep.c',
  'libtsp/SP/SPpcXcor.c',
  'libtsp/SP/SPpcXec.c',
  'libtsp/SP/SPpcXlsf.c',
  'libtsp/SP/SPpcXrc.c',
  'libtsp/SP/SPrcXpc.c',
)

# String routines (ST module)
st_sources = files(
  'libtsp/ST/nucleus/STdec1val.c',
  'libtsp/ST/nucleus/STdecNval.c',
  'libtsp/ST/nucleus/STdecPair.c',
  'libtsp/ST/nucleus/STstrDots.c',
  'libtsp/ST/nucleus/STstrstrNM.c',
  'libtsp/ST/nucleus/STtrimIws.c',
  'libtsp/ST/nucleus/STtrimNMax.c',
  'libtsp/ST/STcatMax.c',
  'libtsp/ST/STcopyMax.c',
  'libtsp/ST/STcopyNMax.c',
  'libtsp/ST/STdec1double.c',
  'libtsp/ST/STdec1float.c',
  'libtsp/ST/STdec1int.c',
  'libtsp/ST/STdec1long.c',
  'libtsp/ST/STdecDfrac.c',
  'libtsp/ST/STdecIfrac.c',
  'libtsp/ST/STdecIrange.c',
  'libtsp/ST/STdecLrange.c',
  'libtsp/ST/STdecNdouble.c',
  'libtsp/ST/STdecNfloat.c',
  'libtsp/ST/STdecNint.c',
  'libtsp/ST/STdecNlong.c',
  'libtsp/ST/STfindToken.c',
  'libtsp/ST/STkeyMatch.c',
  'libtsp/ST/STkeyXpar.c',
  'libtsp/ST/STstrLC.c',
  'libtsp/ST/STtrim.c',
  'libtsp/ST/STunQuote.c',
)

# Utility routines (UT module)
ut_sources = files(
  'libtsp/UT/nucleus/UTbyteCode.c',
  'libtsp/UT/nucleus/UTbyteOrder.c',
  'libtsp/UT/nucleus/UTcheckIEEE.c',
  'libtsp/UT/nucleus/UTctime.c',
  'libtsp/UT/nucleus/UTdecOption.c',
  'libtsp/UT/nucleus/UTdIEEE80.c',
  'libtsp/UT/nucleus/UTeIEEE80.c',
  'libtsp/UT/nucleus/UTgetHost.c',
  'libtsp/UT/nucleus/UTgetUser.c',
  'libtsp/UT/nucleus/UTswapCode.c',
  'libtsp/UT/UTdate.c',
  'libtsp/UT/UTerror.c',
  'libtsp/UT/UTfree.c',
  'libtsp/UT/UTgetOption.c',
  'libtsp/UT/UThalt.c',
  'libtsp/UT/UTmalloc.c',
  'libtsp/UT/UTrealloc.c',
  'libtsp/UT/UTsetProg.c',
  'libtsp/UT/UTsysMsg.c',
  'libtsp/UT/UTuserName.c',
  'libtsp/UT/UTwarn.c',
)

# Vector routines (VR module)
vr_sources = files(
  'libtsp/VR/nucleus/VRswapBytes.c',
  'libtsp/VR/VRdAdd.c',
  'libtsp/VR/VRdCopy.c',
  'libtsp/VR/VRdCorSym.c',
  'libtsp/VR/VRdDotProd.c',
  'libtsp/VR/VRdLinInc.c',
  'libtsp/VR/VRdMult.c',
  'libtsp/VR/VRdPrint.c',
  'libtsp/VR/VRdRFFTMSq.c',
  'libtsp/VR/VRdScale.c',
  'libtsp/VR/VRdSet.c',
  'libtsp/VR/VRdShift.c',
  'libtsp/VR/VRdSymPart.c',
  'libtsp/VR/VRdZero.c',
  'libtsp/VR/VRfAdd.c',
  'libtsp/VR/VRfAmpldB.c',
  'libtsp/VR/VRfCopy.c',
  'libtsp/VR/VRfCorSym.c',
  'libtsp/VR/VRfDiff.c',
  'libtsp/VR/VRfDiffSq.c',
  'libtsp/VR/VRfDotProd.c',
  'libtsp/VR/VRfLog10.c',
  'libtsp/VR/VRfMax.c',
  'libtsp/VR/VRfMin.c',
  'libtsp/VR/VRfMult.c',
  'libtsp/VR/VRfPow10.c',
  'libtsp/VR/VRfPrint.c',
  'libtsp/VR/VRfRev.c',
  'libtsp/VR/VRfScale.c',
  'libtsp/VR/VRfSet.c',
  'libtsp/VR/VRfShift.c',
  'libtsp/VR/VRfSum.c',
  'libtsp/VR/VRfZero.c',
  'libtsp/VR/VRiPrint.c',
  'libtsp/VR/VRiZero.c',
  'libtsp/VR/VRlPrint.c',
)

# Combine all sources
libtsp_sources = af_sources + fi_sources + fl_sources + fn_sources + ma_sources + ms_sources + sp_sources + st_sources + ut_sources + vr_sources

# Find math library
m_dep = meson.get_compiler('c').find_library('m', required: false)

# Build static library
libtsp = static_library('tsp',
  libtsp_sources,
  include_directories: inc,
  dependencies: m_dep,
  install: false,
)

# Declare dependency
libtsp_dep = declare_dependency(
  link_with: libtsp,
  include_directories: inc,
)

meson.override_dependency('libtsp', libtsp_dep)
